package br.com.andreleonam.promed.domain.enums;

public enum TipoDocumento {

    CERTIDAO_NASCIMENTO,
    PASSAPORTE,
    OUTROS
}